<?xml version="1.0" encoding="utf-8"?><!--
  ~ (C) Copyright 2008 STYL Solutions Pte. Ltd. , All rights reserved
  ~ This source code and any compilation or derivative thereof is the sole
  ~ property of STYL Solutions Pte. Ltd. and is provided pursuant to a
  ~ Software License Agreement.  This code is the proprietary information of
  ~ STYL Solutions Pte. Ltd. and is confidential in nature. Its use and
  ~ dissemination by any party other than STYL Solutions Pte. Ltd. is strictly
  ~ limited by the confidential information provisions of the Agreement
  ~ referenced above.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.styl.phome.customview.CustomTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verification_code"
            android:textColor="@color/green"
            android:textSize="@dimen/toolbar_title_size"
            app:customFont="@string/koho_bold" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back" />
    </FrameLayout>

    <com.styl.phome.customview.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/common_horizontal_spacing"
        android:layout_marginTop="@dimen/common_top_spacing"
        android:gravity="center"
        android:text="@string/pls_type_verification_code"
        android:textSize="@dimen/small_text_size"
        app:customFont="@string/koho_regular" />

    <com.styl.phome.customview.OtpView
        android:id="@+id/otpCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/verification_field_spacing"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/koho_regular"
        android:inputType="numberDecimal"
        android:textColor="@color/text_color"
        android:textSize="@dimen/content_text_size"
        app:itemCount="4"
        app:itemHeight="40dp"
        app:itemRadius="8dp"
        app:itemSpacing="8dp"
        app:itemWidth="35dp"
        app:lineWidth="1dp" />

    <com.styl.phome.customview.CustomTextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/verification_field_spacing"
        android:textColor="@color/red"
        android:textSize="@dimen/content_text_size"
        android:visibility="invisible"
        app:customFont="@string/koho_medium"
        tools:text="60s" />

    <com.styl.phome.customview.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/verification_field_spacing"
        android:text="@string/otp_not_received"
        android:textSize="@dimen/small_text_size"
        app:customFont="@string/koho_medium" />

    <com.styl.phome.customview.CustomTextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Resent"
        android:textColor="@drawable/text_resend_selector"
        android:textSize="@dimen/small_text_size"
        app:customFont="@string/koho_medium" />

    <com.styl.phome.customview.CustomButton
        android:id="@+id/btnSubmit"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_horizontal_spacing"
        android:layout_marginTop="@dimen/verification_field_spacing"
        android:enabled="true"
        android:letterSpacing="0.16"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/content_text_size"
        app:customFont="@string/koho_bold" />

</LinearLayout>