<?xml version="1.0" encoding="utf-8"?><!--
  ~ (C) Copyright 2008 STYL Solutions Pte. Ltd. , All rights reserved
  ~ This source code and any compilation or derivative thereof is the sole
  ~ property of STYL Solutions Pte. Ltd. and is provided pursuant to a
  ~ Software License Agreement.  This code is the proprietary information of
  ~ STYL Solutions Pte. Ltd. and is confidential in nature. Its use and
  ~ dissemination by any party other than STYL Solutions Pte. Ltd. is strictly
  ~ limited by the confidential information provisions of the Agreement
  ~ referenced above.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.styl.phome.customview.CustomTextView
            android:id="@+id/tvTitle"
            style="@style/title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_p_home"
            android:textColor="@color/green" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/iv_plugin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@drawable/background_scan_gradient">

        <ImageView
            android:layout_width="@dimen/scan_width"
            android:layout_height="@dimen/scan_height"
            android:layout_gravity="center"
            android:src="@drawable/ic_scan" />
    </FrameLayout>

    <TextView
        style="@style/medium_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:paddingHorizontal="@dimen/text_padding_horizontal"
        android:text="@string/scan_text"
        android:textAlignment="center" />

    <TextView
        style="@style/title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:paddingHorizontal="@dimen/text_padding_horizontal"
        android:text="@string/or"
        android:textAlignment="center" />

    <TextView
        style="@style/title_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:paddingHorizontal="@dimen/text_padding_horizontal"
        android:text="@string/input_series_number"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_long_height"
        android:layout_margin="@dimen/text_padding_horizontal"
        android:background="@drawable/background_edittext"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/input_padding_horizontal"
        android:paddingVertical="@dimen/input_padding_vertical"
        android:weightSum="3">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/bt_go"
            style="@style/button_small_green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/go" />

    </LinearLayout>

</LinearLayout>