<?xml version="1.0" encoding="utf-8"?><!--
  ~ (C) Copyright 2008 STYL Solutions Pte. Ltd. , All rights reserved
  ~ This source code and any compilation or derivative thereof is the sole
  ~ property of STYL Solutions Pte. Ltd. and is provided pursuant to a
  ~ Software License Agreement.  This code is the proprietary information of
  ~ STYL Solutions Pte. Ltd. and is confidential in nature. Its use and
  ~ dissemination by any party other than STYL Solutions Pte. Ltd. is strictly
  ~ limited by the confidential information provisions of the Agreement
  ~ referenced above.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.styl.phome.customview.CustomTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_password"
            android:textColor="@color/green"
            android:textSize="@dimen/toolbar_title_size"
            app:customFont="@string/koho_bold" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
        android:layout_marginTop="@dimen/common_top_spacing"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.styl.phome.customview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_spacing"
            android:text="@string/new_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_text_size"
            app:customFont="@string/koho_medium" />

        <ImageView
            android:layout_width="@dimen/ic_required_width"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_required" />
    </LinearLayout>

    <com.styl.phome.customview.CustomEditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
        android:layout_marginTop="@dimen/small_spacing"
        android:background="@drawable/white_field"
        android:gravity="center_vertical|start"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingHorizontal="18dp"
        android:textColor="@color/green"
        android:textSize="@dimen/content_text_size"
        app:customFont="@string/koho_bold"
        tools:text="Email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
        android:layout_marginTop="@dimen/common_field_spacing"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.styl.phome.customview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_spacing"
            android:text="@string/confirm_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_text_size"
            app:customFont="@string/koho_medium" />

        <ImageView
            android:layout_width="@dimen/ic_required_width"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_required" />
    </LinearLayout>

    <com.styl.phome.customview.CustomEditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
        android:layout_marginTop="@dimen/small_spacing"
        android:background="@drawable/white_field"
        android:gravity="center_vertical|start"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingHorizontal="18dp"
        android:textColor="@color/green"
        android:textSize="@dimen/content_text_size"
        app:customFont="@string/koho_bold"
        tools:text="Email" />

    <com.styl.phome.customview.CustomButton
        android:id="@+id/btnSubmit"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_horizontal_spacing"
        android:layout_marginTop="@dimen/common_field_spacing"
        android:enabled="true"
        android:letterSpacing="0.16"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/content_text_size"
        app:customFont="@string/koho_bold" />

</LinearLayout>